# GMSNBurr-pada-PyMC-dan-Bambi

./: .gitignore  LICENSE  README (5).md  README.md  pyproject.toml  setup.cfg
examples/: example.ipynb
gmsnburr/: README (6).md  README.md  __init__.py  bambi.py  cek_gpu.py  dist.py  gmsnburr.py  gmsnburr_bambi.py  gmsnburr_pymc.py  prior.ipynb  pymc.py  requirements.py
