[metadata]
name = gmsnburr
version = 0.1.0
author = Ezra Zia Izdihara
author_email = ezrazia05@gmail.com
description = Custom GMSNBurr distribution for PyMC and Bambi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ezrazia/GMSNBurr-pada-PyMC-dan-Bambi
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find: